# CPP-prototyping-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  board.txt
sources/: Application.cpp  Application.h  main.cpp  stb_compile_unit.c
sources/chessis/: board.h  chessis.h  debug.h  eval.h  loader.h  misc.h  move.h  negamax.h  piece.h  rules.h  tests.cpp  types.h
sources/utils/: aabb.h  align.h  assertion.cpp  assertion.h  buffer.h  common.cpp  common.h  comp.h  doc_test_runner.cpp  doc_test_runner.h  frustum_cull.h  gaussiun_kernel.h  glm_ext.h  glm_printers.h  math.h  priority_queue.h  profiler.cpp  profiler.h  runtime_error.h  stack_buffer.h  stack_vector.h  string_format.cpp  string_format.h  string_hash.h  type_names.h  vector2d_func.h  wild_mask.cpp  wild_mask.h
